<!-- Auto layout, variables, and unit scale are not yet supported -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_scre"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start">


    <TextView
        android:id="@+id/tvNotes"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:padding="15dp"
        android:textColor="#686565"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694"
        android:text="@string/take_your_notes_n_easily" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="268dp"
        android:layout_height="48dp"

        android:text="@string/it_s_easy_now_to_remember_n_important_things"
        android:textColor="#373939"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNotes"
        app:layout_constraintVertical_bias="0.306" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_margin="20dp"
        style="@android:style/ButtonBar"
        tools:ignore="VisualLintButtonSize" />


</androidx.constraintlayout.widget.ConstraintLayout>

